--- a/src/main/resources/databaseLocal.properties
+++ b/src/main/resources/databaseLocal.properties
@@ -1,4 +1,4 @@
 database.driver=org.mariadb.jdbc.Driver
 database.user=root
-database.password=root
-database.url=jdbc:mariadb://localhost:3307/compta
+database.password=
+database.url=jdbc:mariadb://localhost:3306/compta
